# lambda

./: README.md  lambda.cabal  stack.yaml
src/: Main.hs
