cabal-version: 2.2

name:           lambda
version:        0.1.0.0
build-type:     Simple

executable bin
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base, gloss
  default-language: Haskell2010
